--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -18,7 +18,7 @@
 body{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
-    line-heigh: 1.4;
+    line-height: 1.4;
     color: #333;
     background-color: #fff;
 }
